--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,4 @@
-<div class="usrs-new-wrapper">
+<div class="users-new-wrapper">
   <div class="container">
     <div class="row">
       <div class="col-md-offset-4 col-md-4 users-new-container">
@@ -11,6 +11,15 @@
         <div class="form-group">
           <%= f.label :email, class: 'text-white' %>
           <%= f.text_field :email, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password, class: 'text-white' %>
+          <%= f.password_field :password, class: 'form-control' %>
+        </div>
+        <div class="form-group">
+          <%= f.label :password_confirmation, class: 'text-white' %>
+          <%= f.password_field :password_confirmation, class: 'form-control' %>
+
         </div>
 
         <%= f.submit "登録", class: 'btn-block btn-white' %>
